// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table participant {
  id varchar [primary key]
  is_confederate integer [default: false]
}

Table group_session {
  id varchar [primary key]
  lion_participant_id varchar [not null, ref:> participant.id]
  tiger_participant_id varchar [not null, ref:> participant.id]
  leopard_participant_id varchar [not null, ref:> participant.id]
}

Table mission {
  id varchar [primary key]
  group_session_id varchar [ref:> group_session.id]
  name varchar
  testbed_version varchar [note: "The version of the testbed used for the mission."]
  final_team_score varchar [note: "The final score achieved by the team."]
}

Table minecraft_event {
  timestamp varchar
  group_session_id varchar [ref:> group_session.id]
  mission varchar
  testbed_version varchar [note: "The version of the testbed used for the trial."]
  final_team_score varchar [note: "The final score achieved by the team."]
  raw_message varchar
}
